--- a/views/signup.html
+++ b/views/signup.html
@@ -53,7 +53,19 @@
                data:formData,
                dataType:'json',
                success:function(data){
-                  console.log(data)
+                  var code = data.code
+                  console.log(code)
+                  switch(code){
+                     case 0:
+                        window.location.href = '/'
+                        break
+                     case 1:
+                        alert('邮箱已占用') 
+                        break
+                     case 2:
+                        alert('昵称已存在')
+                        break
+                  }
                },
                error:function(err){
                   console.log(err)
