session中间件 记录验证登录

--- a/views/signin.html
+++ b/views/signin.html
@@ -16,27 +16,66 @@
       </a>
       <h1>用户登录</h1>
     </div>
-    <form>
+    <form id="signin_form">
       <div class="form-group">
-        <label for="exampleInputEmail1">邮箱</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" autofocus>
+        <label for="inputEmail">邮箱</label>
+        <input type="email" class="form-control" id="inputEmail" placeholder="Email" autofocus  name="email" required>
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">密码</label>
+        <label for="inputPassword">密码</label>
         <a class="pull-right" href="">忘记密码？</a>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password" placeholder="Password" required >
       </div>
       <div class="checkbox">
         <label>
           <input type="checkbox">记住我
         </label>
       </div>
-      <button type="button" class="btn btn-success btn-block">登录</button>
+      <button type="submit" class="btn btn-success btn-block">登录</button>
     </form>
     <div class="message">
       <p>没有账号? <a href="/register">点击创建</a>.</p>
     </div>
   </div>
+  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+  <script>
+         // 提交是事件处理方法
+         // 得到表单数据
+         // 前端验证
+         // 发送注册请求
+         // 更具服务端响应结果做交互处理
+         var $signinForm  = $('#signin_form')
+         $signinForm.on('submit',function(e){
+            e.preventDefault()
+            handleSignin()
+         })
+         function handleSignin(){
+            var formData = $signinForm.serialize()
+            $.ajax({
+               url:'./signin',
+               method:'post',
+               data:formData,
+               dataType:'json',
+               success:function(data){
+                  var code = data.code
+                  switch(code){
+                     case 0:
+                        window.location.href = '/'
+                        break
+                     case 1:
+                        alert('请填写正确的信息') 
+                        break
+                     case 2:
+                        alert('请填写正确的等等信息')
+                        break
+                  }
+               },
+               error:function(err){
+                  console.log(err)
+               }
+            })
+         }
+  </script>
 </body>
 
 </html>
