--- a/views/_includes/header.html
+++ b/views/_includes/header.html
@@ -36,21 +36,28 @@
         </div>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <a class="btn btn-default navbar-btn" href="/topics/new">发起</a>
-        <a class="btn btn-primary navbar-btn" href="/signin">登录</a>
-        <a class="btn btn-success navbar-btn" href="/signup">注册</a>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img width="20" height="20" src="../public/img/avatar-max-img.png" alt=""> <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li class="dropdown-current-user">
-              当前登录用户: xxx
+        {{if user}}
+          <a class="btn btn-default navbar-btn" href="/topics/new">发起</a>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img width="20" height="20" src="../public/img/avatar-max-img.png" alt=""> <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-current-user">
+                  当前登录用户: {{user.nickname}}
+                </li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">个人主页</a></li>
+                <li><a href="/settings/profile">设置</a></li>
+                <li><a href="#">提出</a></li>
+              </ul>
             </li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">个人主页</a></li>
-            <li><a href="/settings/profile">设置</a></li>
-            <li><a href="#">提出</a></li>
-          </ul>
-        </li>
+          
+          {{else}}
+          <a class="btn btn-primary navbar-btn" href="/signin">登录</a>
+          <a class="btn btn-success navbar-btn" href="/signup">注册</a>
+        {{/if}}
+        
+        
+        
       </ul>
     </div>
     <!-- /.navbar-collapse -->
